# ArcticEngineLinux

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  nvidia.sh  vkvia.html
.devcontainer/: Dockerfile  devcontainer.json  docker-build.sh  docker-compose.yaml  docker-run.sh
.devcontainer/old/: docker-attach.sh  docker-run.sh
assets/shaders/: first_shader.vert
include/arctic/core/utilities/: file_utility.h
include/arctic/graphics/vulkan/: vk_window.h
src/: CMakeLists.txt
src/arctic/: CMakeLists.txt
src/arctic/core/: CMakeLists.txt
src/arctic/core/engine/: CMakeLists.txt  arctic_engine.cpp
src/arctic/core/engine/src/: arctic_engine.cpp
src/arctic/core/utilities/: CMakeLists.txt  file_utility.cpp
src/arctic/core/utilities/include/utilities/: application.h
src/arctic/graphics/: CMakeLists.txt
src/arctic/graphics/rhi/: CMakeLists.txt
src/arctic/graphics/vulkan/: CMakeLists.txt  render_utils.cpp  vk_context.cpp  vk_loader.cpp  vk_loader.h  vk_memory_handler.cpp  vk_memory_handler.h  vk_renderloop.cpp  vk_renderloop.h  vk_renderpipeline.cpp  vk_renderpipeline.h  vk_swapchain.cpp  vk_swapchain.h
src/arctic/graphics/vulkan/include/arctic/graphics/vulkan/: vk_context.h
src/arctic/graphics/vulkan/src/: render_utils.h  rendering_utilities.cpp  rendering_utilities.h  vk_loader.cpp  vk_renderloop.cpp  vk_renderloop.h  vk_renderpipeline.cpp  vk_window.cpp  vulkan_context.cpp  vulkan_loader.cpp  vulkan_memory_handler.cpp  vulkan_renderloop.cpp  vulkan_renderloop.h  vulkan_renderpipeline.cpp  vulkan_renderpipeline.h  vulkan_swapchain.cpp  vulkan_window.cpp
src/editor/: CMakeLists.txt
src/editor/engine/: CMakeLists.txt
src/editor/engine/include/engine/: arctic_engine.h
src/editor/engine/src/: arctic_engine.cpp  renderloop.cpp  renderloop.h  renderpipeline.cpp  renderpipeline.h  swapchain.cpp  swapchain.h  swapchain_data.h  vulkan_loader.cpp  vulkan_loader.h  vulkan_window.cpp  vulkan_window.h
src/editor/engine/src/engine/: arctic_engine.cpp
src/editor/rendering/: CMakeLists.txt
src/editor/rendering/include/arctic_rendering/: uniform_buffer_object.h  vertex.h
src/editor/rendering/src/: uniform_buffer_object.cpp  vertex.cpp
src/editor/utilities/: CMakeLists.txt
src/editor/utilities/include/utilities/: application.h  file_utility.h
src/editor/utilities/src/: file_utility.cpp
src/editor/vulkan/: CMakeLists.txt
src/editor/vulkan/include/arctic_vulkan/: rendering_utilities.h  vulkan_context.h  vulkan_loader.h  vulkan_memory_handler.h  vulkan_renderloop.h  vulkan_renderpipeline.h  vulkan_swapchain.h  vulkan_window.h
src/editor/vulkan/src/: rendering_utilities.cpp  vulkan_context.cpp  vulkan_loader.cpp  vulkan_memory_handler.cpp  vulkan_renderloop.cpp  vulkan_renderpipeline.cpp  vulkan_swapchain.cpp  vulkan_window.cpp
src/game/: CMakeLists.txt  game.cpp
